# F_Brain

./: .gitignore  README.md  docker  docker-compose.yml  structure.sh
LinuxTooling/: Dockerfile
Monitoring/: Dockerfile
client/: Dockerfile  index.html  package-lock.json  package.json  vite.config.js
client/src/: App.jsx  AuthContext.jsx  Dashboard.jsx  app.jsx  login.jsx  main.jsx  sidebar.jsx
client/src/api/: todos.js  todos.jsx
client/src/components/: login.jsx  todolist.jsx
monitoring/: Dockerfile  grafana.ini  prometheus.yml
monitoring/prometheus/prometheus-bin/: prometheus.yml
monitoring/prometheus/prometheus-bin/data/wal/: 00000000
nginx/: nginx.conf
proxy/: nginx.conf
server/: .env  .gitignore  Dockerfile  celery.py  db.sqlite3  entrypoint.sh  manage.py  pyproject.toml  settings.py
server/accounts/: views.py
server/backend/: celery.py  settings.py
server/backend/backend/: celery.py  setting.py  settings.py
server/core/: metrics.py  tasks.py  urls.py  views.py
server/nginx/: nginx.conf
server/server/: celery.py  settings.py  urls.py
server/taskbrain/: asgi.py  settings.py  urls.py  wsgi.py
server/todo_app/: admin.py  models.py  urls.py  views.py
server/todo_app/api/: serializers.py  urls.py  views.py
server/todo_app/migrations/: 0001_initial.py  0002_todo_user.py  0003_todo_description_todo_due_date_todo_priority_and_more.py
